testando o sorteio de clubes

--- a/sorteador_da_champions/src/App.css
+++ b/sorteador_da_champions/src/App.css
@@ -21,7 +21,10 @@ ul li{
   font-weight: bold;
   background-color: white;
   border-radius: 12px;
-  padding: 5px 10px 5px 10px;
+  padding: 10px 10px 10px 10px;
   margin-top: 15px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
