--- a/sorteador_da_champions/src/index.css
+++ b/sorteador_da_champions/src/index.css
@@ -20,6 +20,7 @@ a {
 }
 a:hover {
   color: #535bf2;
+  
 }
 
 body {
@@ -27,6 +28,7 @@ body {
   display: flex;
   place-items: center;
   min-height: 100vh;
+  width: 100%;
   
 }
 
