--- a/sorteador_da_champions/src/App.css
+++ b/sorteador_da_champions/src/App.css
@@ -30,14 +30,17 @@ h1{
   color: white;
 }
 
-jogo_fora{}
-jogo_em_casa{}
+.clubeDiv{
+ 
+}
+
+.jogo_fora{}
+.jogo_em_casa{background-color: rgb(65, 3, 236);}
 
 ul li{
   color: white;
   list-style: none;
   font-weight: bold;
-  border-radius: 12px;
   padding: 10px 10px 10px 10px;
   margin-top: 15px;
   cursor: pointer;
